--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 project(DFT)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -o")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -o -g")
 
 set(SOURCE_FILES client.c mainServer.c server.c dataStructures.h dataStructures.c)
 
@@ -15,6 +15,7 @@ set(SOURCE_FILES2
 
 set(SOURCE_FILES3
         mainServer.c
+        server.c
         dataStructures.c
         server.c
         dataStructures.h server.h)
